--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(samples/background)
 add_subdirectory(samples/widgets)
 add_subdirectory(samples/flags)
 add_subdirectory(samples/moving-objects)
+add_subdirectory(samples/mouse-actions)
